--- a/htdocs/theme/frontend/scss/blocks/footer/footer.scss
+++ b/htdocs/theme/frontend/scss/blocks/footer/footer.scss
@@ -1,7 +1,7 @@
 @import '../../global';
 
 .footer__container {
-    border-top: $red solid 0.25em;
+    border-top: $oc-primary solid 0.25em;
     background: $gray-darker;
     color: $white;
     padding: 1rem;
